deploy-flask.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: flask-deploy
spec:
  replicas: 6
  minReadySeconds: 6
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: ping-flask
    spec:
      containers:
      - name: ping-flask
        image: natanbs/flask-ping:latest
        ports:
        - containerPort: 5000
