deploy-redis.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis-deploy
spec:
  replicas: 1
  minReadySeconds: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: ping-redis
    spec:
      containers:
      - name: ping-redis
        image: redis
        ports:
        - containerPort: 6379
