pod-flask.yml
apiVersion: v1
kind: Pod
metadata:
  name: ping-flask
  labels:
    zone: prod
    version: v1
    app: flask
spec:
  containers:
  - name: ping-flask
    image: natanbs/flask-ping:latest
    ports:
    - containerPort: 5000
