pod-redis.yml
apiVersion: v1
kind: Pod
metadata:
  name: ping-redis
  labels:
    zone: prod
    version: v1
    app: redis
spec:
  containers:
  - name: ping-redis
    image: redis
    ports:
    - containerPort: 6379
