pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: ping-pod
  labels:
    zone: prod
    version: v1
    app: web
spec:
  containers:
  - name: ping-flask
    image: natanbs/flask-ping:latest
    ports:
    - containerPort: 5000

  - name: ping-redis
    image: redis
    ports:
    - containerPort: 6379
