svc-flask.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-svc
  labels:
    app: ping-flask
spec:
  type: LoadBalancer
  ports:
  - name: flask
    port: 5000
    nodePort: 30001
    protocol: TCP
  selector:
    app: ping-flask
