svc-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  labels:
    app: ping-redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
  type: ClusterIP
  selector:
    app: ping-redis
