svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ping-svc
  labels:
    app: ping-flask
spec:
  type: LoadBalancer
  ports:
  - name: flask
    port: 5000
    nodePort: 30001
    protocol: TCP
  - name: redis
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: ping-flask
